5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1735_2517.log
== TEST (2019-05-20 17:32:47) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

print(H)
-- OUTPUT:
31.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:33:01) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 0
g = 9.8
H = PsI - (1*g*t**2/2)

print(H)
-- OUTPUT:
36.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:33:06) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 0
g = 9.8
H = PsI - (1*g*t**2/2)

print(H)
-- OUTPUT:
36.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:34:22) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 0
g = 9.8
H = PsI - (1*g*t**2/2)

while (h > 0):
	PsI = H
	t = t+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while (h > 0):
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:34:42) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 0
g = 9.8
H = PsI - (1*g*t**2/2)

while (h > 0):
	PsI = H
	t = t+1
	print(PsI)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while (h > 0):
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:34:55) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 0
g = 9.8
H = PsI - (1*g*t**2/2)

while (PsI > 0):
	PsI = H
	t = t+1
	print(PsI)
-- OUTPUT:
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
36.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:39:12) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

while (H > 0):
	H = PsI - (1*g*t**2/2)
	t = t+1
	print(t)
	print(H)
-- OUTPUT:
2
31.1
3
16.4
4
-8.100000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:41:06) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

while (H >= 0):
	print("t =",t)
	print("h =",H)
	H = PsI - (1*g*t**2/2)
	t = t+1
-- OUTPUT:
t = 1
h = 31.1
t = 2
h = 31.1
t = 3
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:42:07) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

while (H > 0):
	print("t =",t)
	print("h =",round(1,H))
	H = PsI - (1*g*t**2/2)
	t = t+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("h =",round(1,H))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:42:50) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

while (H > 0):
	print("t =",t)
	print("h =",round(H,1))
	H = PsI - (1*g*t**2/2)
	t = t+1
-- OUTPUT:
t = 1
h = 31.1
t = 2
h = 31.1
t = 3
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:43:01) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

while (H > 0):
	print("t =",t)
	print("h =",round(H,1))
	H = PsI - (1*g*t**2/2)
	t = t+1
-- EXECUTION TIME:
0.289859
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 1
h = 31.1
t = 2
h = 31.1
t = 3
h = 16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t = 1
h = 6.6
t = 2
h = 6.6
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t = 1
h = 1229.6
t = 2
h = 1229.6
t = 3
h = 1214.9
t = 4
h = 1190.4
t = 5
h = 1156.1
t = 6
h = 1112.0
t = 7
h = 1058.1
t = 8
h = 994.4
t = 9
h = 920.9
t = 10
h = 837.6
t = 11
h = 744.5
t = 12
h = 641.6
t = 13
h = 528.9
t = 14
h = 406.4
t = 15
h = 274.1
t = 16
h = 132.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:43:09) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

while (H >= 0):
	print("t =",t)
	print("h =",round(H,1))
	H = PsI - (1*g*t**2/2)
	t = t+1
-- EXECUTION TIME:
0.17062
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 1
h = 31.1
t = 2
h = 31.1
t = 3
h = 16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t = 1
h = 6.6
t = 2
h = 6.6
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t = 1
h = 1229.6
t = 2
h = 1229.6
t = 3
h = 1214.9
t = 4
h = 1190.4
t = 5
h = 1156.1
t = 6
h = 1112.0
t = 7
h = 1058.1
t = 8
h = 994.4
t = 9
h = 920.9
t = 10
h = 837.6
t = 11
h = 744.5
t = 12
h = 641.6
t = 13
h = 528.9
t = 14
h = 406.4
t = 15
h = 274.1
t = 16
h = 132.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:43:16) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

while (H >= 0):
	print("t =",t)
	print("h =",round(H,1))
	H = PsI - (1*g*t**2/2)
	t = t+1
-- EXECUTION TIME:
0.22609
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 1
h = 31.1
t = 2
h = 31.1
t = 3
h = 16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t = 1
h = 31.1
t = 2
h = 31.1
t = 3
h = 16.4
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t = 1
h = 31.1
t = 2
h = 31.1
t = 3
h = 16.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:43:16) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

while (H >= 0):
	print("t =",t)
	print("h =",round(H,1))
	H = PsI - (1*g*t**2/2)
	t = t+1
-- EXECUTION TIME:
0.220534
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 1
h = 31.1
t = 2
h = 31.1
t = 3
h = 16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t = 1
h = 31.1
t = 2
h = 31.1
t = 3
h = 16.4
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t = 1
h = 6.6
t = 2
h = 6.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:43:16) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

while (H >= 0):
	print("t =",t)
	print("h =",round(H,1))
	H = PsI - (1*g*t**2/2)
	t = t+1
-- EXECUTION TIME:
0.214607
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 1
h = 31.1
t = 2
h = 31.1
t = 3
h = 16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t = 1
h = 6.6
t = 2
h = 6.6
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t = 1
h = 1229.6
t = 2
h = 1229.6
t = 3
h = 1214.9
t = 4
h = 1190.4
t = 5
h = 1156.1
t = 6
h = 1112.0
t = 7
h = 1058.1
t = 8
h = 994.4
t = 9
h = 920.9
t = 10
h = 837.6
t = 11
h = 744.5
t = 12
h = 641.6
t = 13
h = 528.9
t = 14
h = 406.4
t = 15
h = 274.1
t = 16
h = 132.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:43:16) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

while (H >= 0):
	print("t =",t)
	print("h =",round(H,1))
	H = PsI - (1*g*t**2/2)
	t = t+1
-- EXECUTION TIME:
0.437837
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 1
h = 31.1
t = 2
h = 31.1
t = 3
h = 16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:

-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t = 1
h = 1229.6
t = 2
h = 1229.6
t = 3
h = 1214.9
t = 4
h = 1190.4
t = 5
h = 1156.1
t = 6
h = 1112.0
t = 7
h = 1058.1
t = 8
h = 994.4
t = 9
h = 920.9
t = 10
h = 837.6
t = 11
h = 744.5
t = 12
h = 641.6
t = 13
h = 528.9
t = 14
h = 406.4
t = 15
h = 274.1
t = 16
h = 132.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:43:17) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

while (H >= 0):
	print("t =",t)
	print("h =",round(H,1))
	H = PsI - (1*g*t**2/2)
	t = t+1
-- EXECUTION TIME:
0.599186
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 1
h = 1229.6
t = 2
h = 1229.6
t = 3
h = 1214.9
t = 4
h = 1190.4
t = 5
h = 1156.1
t = 6
h = 1112.0
t = 7
h = 1058.1
t = 8
h = 994.4
t = 9
h = 920.9
t = 10
h = 837.6
t = 11
h = 744.5
t = 12
h = 641.6
t = 13
h = 528.9
t = 14
h = 406.4
t = 15
h = 274.1
t = 16
h = 132.0
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t = 1
h = 1229.6
t = 2
h = 1229.6
t = 3
h = 1214.9
t = 4
h = 1190.4
t = 5
h = 1156.1
t = 6
h = 1112.0
t = 7
h = 1058.1
t = 8
h = 994.4
t = 9
h = 920.9
t = 10
h = 837.6
t = 11
h = 744.5
t = 12
h = 641.6
t = 13
h = 528.9
t = 14
h = 406.4
t = 15
h = 274.1
t = 16
h = 132.0
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:43:17) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 1
g = 9.8
H = PsI - (1*g*t**2/2)

while (H >= 0):
	print("t =",t)
	print("h =",round(H,1))
	H = PsI - (1*g*t**2/2)
	t = t+1
-- EXECUTION TIME:
0.535835
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 1
h = 1229.6
t = 2
h = 1229.6
t = 3
h = 1214.9
t = 4
h = 1190.4
t = 5
h = 1156.1
t = 6
h = 1112.0
t = 7
h = 1058.1
t = 8
h = 994.4
t = 9
h = 920.9
t = 10
h = 837.6
t = 11
h = 744.5
t = 12
h = 641.6
t = 13
h = 528.9
t = 14
h = 406.4
t = 15
h = 274.1
t = 16
h = 132.0
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:

-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:43:31) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 0
g = 9.8
H = PsI - (1*g*t**2/2)

while (H >= 0):
	print("t =",t)
	print("h =",round(H,1))
	H = PsI - (1*g*t**2/2)
	t = t+1
-- EXECUTION TIME:
0.130516
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
insira altura inicial: t = 0
h = 36.0
t = 1
h = 36.0
t = 2
h = 31.1
t = 3
h = 16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
insira altura inicial: t = 0
h = 11.5
t = 1
h = 11.5
t = 2
h = 6.6
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
insira altura inicial: t = 0
h = 1234.5
t = 1
h = 1234.5
t = 2
h = 1229.6
t = 3
h = 1214.9
t = 4
h = 1190.4
t = 5
h = 1156.1
t = 6
h = 1112.0
t = 7
h = 1058.1
t = 8
h = 994.4
t = 9
h = 920.9
t = 10
h = 837.6
t = 11
h = 744.5
t = 12
h = 641.6
t = 13
h = 528.9
t = 14
h = 406.4
t = 15
h = 274.1
t = 16
h = 132.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:43:35) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 0
g = 9.8
H = PsI - (1*g*t**2/2)

while (H >= 0):
	print("t =",t)
	print("h =",round(H,1))
	H = PsI - (1*g*t**2/2)
	t = t+1
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 36.0
t = 2
h = 31.1
t = 3
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:44:00) 
-- CODE:
PsI = float(input("insira altura inicial: "))
t = 0
g = 9.8
H = PsI - (1*g*t**2/2)

while (H >= 0):
	print("t =",t)
	print("h =",round(H,1))
	t += 1
	H = PsI - (1*g*t**2/2)
-- EXECUTION TIME:
0.155614
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t = 0
h = 11.5
t = 1
h = 6.6
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
